--- a/index.html
+++ b/index.html
@@ -3,165 +3,144 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexa Tution Manager Pro</title>
+    <title>Nexa Tution Pro | Premium Edition</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
-        .dark-mode { background-color: #1a202c; color: #e2e8f0; }
-        .lock-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9); display: flex; flex-direction: column;
-            justify-content: center; align-items: center; z-index: 9999; color: white;
-        }
+        :root { --primary: #6366f1; --bg: #f8fafc; }
+        .dark-mode { --bg: #0f172a; color: white; }
+        body { background-color: var(--bg); font-family: 'Inter', sans-serif; }
+        .glass { background: rgba(255, 255, 255, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.2); }
+        .dark-mode .glass { background: rgba(30, 41, 59, 0.7); border: 1px solid rgba(255,255,255,0.05); }
+        .lock-overlay { position: fixed; inset: 0; background: #0f172a; z-index: 10000; display: flex; align-items: center; justify-content: center; }
     </style>
 </head>
-<body class="bg-gray-100 transition-colors duration-300" id="bodyTag">
+<body id="appBody">
 
-    <div id="lockScreen" class="lock-overlay hidden">
-        <i class="fas fa-user-shield text-6xl mb-4 text-blue-500"></i>
-        <h2 class="text-2xl font-bold mb-2">Trial Expired!</h2>
-        <p class="mb-4 text-gray-400">Please enter your Permanent Key to continue.</p>
-        <input type="text" id="licenseInput" placeholder="Enter Key Here" class="p-2 rounded text-black mb-4 w-64 text-center">
-        <button onclick="checkLicense()" class="bg-blue-600 px-8 py-2 rounded-full font-bold">ACTIVATE NOW</button>
-        <p class="mt-6 text-sm">Contact: 8882737014 | Nexa AI</p>
+    <div id="activationScreen" class="lock-overlay">
+        <div class="glass p-8 rounded-3xl w-80 text-center shadow-2xl">
+            <div class="w-20 h-20 bg-indigo-600 rounded-2xl mx-auto mb-6 flex items-center justify-center shadow-lg shadow-indigo-500/50">
+                <i class="fas fa-key text-3xl text-white"></i>
+            </div>
+            <h2 class="text-xl font-bold text-white mb-2">Activate Nexa Pro</h2>
+            <p class="text-gray-400 text-xs mb-6">Enter Trial or Permanent Key</p>
+            <input type="text" id="keyInput" placeholder="Enter Key Here" class="w-full bg-slate-800 border-none rounded-xl p-3 text-white text-center mb-4 focus:ring-2 focus:ring-indigo-500">
+            <button onclick="activateApp()" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 rounded-xl transition-all">Activate</button>
+            <p class="mt-6 text-[10px] text-gray-500">For keys, contact your software provider.</p>
+        </div>
     </div>
 
-    <div class="max-w-md mx-auto p-4 pb-24">
-        <header class="flex justify-between items-center mb-6">
+    <div class="max-w-md mx-auto p-6">
+        <header class="flex justify-between items-center mb-8">
             <div>
-                <h1 class="text-xl font-bold text-blue-600">Nexa Tution Manager</h1>
-                <p id="liveClock" class="text-xs text-gray-500"></p>
+                <span class="text-[10px] font-bold tracking-widest text-indigo-500 uppercase">Premium Management</span>
+                <h1 class="text-2xl font-black text-slate-800 dark:text-white">Tution Manager</h1>
             </div>
-            <button onclick="toggleDarkMode()" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700">
-                <i class="fas fa-moon"></i>
+            <button onclick="toggleTheme()" class="w-10 h-10 rounded-xl glass flex items-center justify-center">
+                <i class="fas fa-moon text-indigo-500"></i>
             </button>
         </header>
 
-        <div class="grid grid-cols-2 gap-4 mb-6">
-            <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow">
-                <p class="text-xs text-gray-400">Total Students</p>
-                <h3 id="studentCount" class="text-2xl font-bold">0</h3>
+        <div class="grid grid-cols-2 gap-4 mb-8">
+            <div class="glass p-5 rounded-3xl shadow-sm">
+                <div class="text-indigo-500 mb-2"><i class="fas fa-users"></i></div>
+                <div class="text-2xl font-bold" id="totalStudents">0</div>
+                <div class="text-[10px] text-gray-400 uppercase">Students</div>
             </div>
-            <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow">
-                <p class="text-xs text-gray-400">Trial Status</p>
-                <h3 id="trialDaysDisplay" class="text-sm font-bold text-green-500">Active</h3>
+            <div class="glass p-5 rounded-3xl shadow-sm border-b-4 border-indigo-500">
+                <div class="text-indigo-500 mb-2"><i class="fas fa-clock"></i></div>
+                <div class="text-sm font-bold" id="statusLabel">Checking...</div>
+                <div class="text-[10px] text-gray-400 uppercase">License</div>
             </div>
         </div>
 
-        <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow mb-6">
-            <h4 class="font-bold mb-3">Add New Student</h4>
-            <input type="text" id="sName" placeholder="Student Name" class="w-full mb-2 p-2 rounded border dark:bg-gray-700 dark:border-gray-600">
-            <input type="text" id="sPhone" placeholder="Parent's WhatsApp Number" class="w-full mb-2 p-2 rounded border dark:bg-gray-700 dark:border-gray-600">
-            <input type="number" id="sFees" placeholder="Monthly Fees (₹)" class="w-full mb-4 p-2 rounded border dark:bg-gray-700 dark:border-gray-600">
-            <button onclick="addStudent()" class="w-full bg-blue-600 text-white py-2 rounded-lg font-bold">Add Student</button>
+        <div class="glass p-6 rounded-3xl mb-8 shadow-sm">
+            <h3 class="text-sm font-bold mb-4 flex items-center gap-2">
+                <i class="fas fa-plus-circle text-indigo-500"></i> Add Student
+            </h3>
+            <div class="space-y-3">
+                <input type="text" id="name" placeholder="Name" class="w-full p-3 rounded-xl bg-slate-50 dark:bg-slate-800 border-none focus:ring-1 focus:ring-indigo-500 outline-none">
+                <input type="text" id="phone" placeholder="WhatsApp (without +91)" class="w-full p-3 rounded-xl bg-slate-50 dark:bg-slate-800 border-none focus:ring-1 focus:ring-indigo-500 outline-none">
+                <input type="number" id="fees" placeholder="Monthly Fees" class="w-full p-3 rounded-xl bg-slate-50 dark:bg-slate-800 border-none focus:ring-1 focus:ring-indigo-500 outline-none">
+                <button onclick="saveStudent()" class="w-full bg-slate-900 dark:bg-indigo-600 text-white font-bold py-3 rounded-xl mt-2 shadow-lg">Save Record</button>
+            </div>
         </div>
 
-        <div id="studentList" class="space-y-4">
-            </div>
+        <div id="listContainer" class="space-y-4"></div>
     </div>
-
-    <nav class="fixed bottom-0 left-0 right-0 bg-white dark:bg-gray-900 border-t p-4 flex justify-around items-center">
-        <button onclick="backupData()" class="text-blue-500 flex flex-col items-center">
-            <i class="fas fa-cloud-upload-alt"></i><span class="text-[10px]">Backup</span>
-        </button>
-        <a href="https://wa.me/918882737014" class="text-green-500 flex flex-col items-center">
-            <i class="fab fa-whatsapp"></i><span class="text-[10px]">Support</span>
-        </a>
-        <button onclick="exportBill()" class="text-orange-500 flex flex-col items-center">
-            <i class="fas fa-file-invoice"></i><span class="text-[10px]">Reports</span>
-        </button>
-    </nav>
 
     <script>
         const PERMANENT_KEY = "Permanentkey63793119";
-        let students = JSON.parse(localStorage.getItem('nexa_students')) || [];
+        const TRIAL_KEY = "TRIAL-7DAY";
+        let students = JSON.parse(localStorage.getItem('nexa_pro_students')) || [];
 
-        // 1. TRIAL & LOCK SYSTEM LOGIC
-        function initSecurity() {
-            let installDate = localStorage.getItem('nexa_install_date');
-            let isUnlocked = localStorage.getItem('nexa_unlocked') === 'true';
+        function activateApp() {
+            const input = document.getElementById('keyInput').value;
+            const now = new Date().getTime();
 
-            if (!installDate) {
-                installDate = new Date().getTime();
-                localStorage.setItem('nexa_install_date', installDate);
-            }
-
-            if (isUnlocked) {
-                document.getElementById('trialDaysDisplay').innerText = "Premium Life";
-                document.getElementById('trialDaysDisplay').className = "text-sm font-bold text-blue-500";
-                return;
-            }
-
-            let today = new Date().getTime();
-            let diffDays = Math.floor((today - installDate) / (1000 * 60 * 60 * 24));
-
-            if (diffDays >= 7) {
-                document.getElementById('lockScreen').classList.remove('hidden');
-            } else {
-                document.getElementById('trialDaysDisplay').innerText = (7 - diffDays) + " Days Left";
-            }
-        }
-
-        function checkLicense() {
-            let input = document.getElementById('licenseInput').value;
             if (input === PERMANENT_KEY) {
-                localStorage.setItem('nexa_unlocked', 'true');
-                alert("App Activated Successfully! Lifetime access granted.");
+                localStorage.setItem('nexa_status', 'permanent');
+                location.reload();
+            } else if (input === TRIAL_KEY) {
+                localStorage.setItem('nexa_status', 'trial');
+                localStorage.setItem('nexa_start', now);
                 location.reload();
             } else {
-                alert("Invalid Key! Please contact Khagesh at 8882737014");
+                alert("Invalid Key! Please contact support.");
             }
         }
 
-        // 2. LIVE CLOCK
-        setInterval(() => {
-            const now = new Date();
-            document.getElementById('liveClock').innerText = now.toLocaleString();
-        }, 1000);
+        function checkSecurity() {
+            const status = localStorage.getItem('nexa_status');
+            const start = localStorage.getItem('nexa_start');
+            const screen = document.getElementById('activationScreen');
+            const statusLabel = document.getElementById('statusLabel');
 
-        // 3. DARK MODE
-        function toggleDarkMode() {
-            document.getElementById('bodyTag').classList.toggle('dark-mode');
-        }
-
-        // 4. STUDENT MANAGEMENT
-        function addStudent() {
-            const name = document.getElementById('sName').value;
-            const phone = document.getElementById('sPhone').value;
-            const fees = document.getElementById('sFees').value;
-
-            if(name && phone && fees) {
-                students.push({ name, phone, fees, id: Date.now() });
-                saveAndRender();
-                document.getElementById('sName').value = '';
-                document.getElementById('sPhone').value = '';
-                document.getElementById('sFees').value = '';
+            if (status === 'permanent') {
+                screen.classList.add('hidden');
+                statusLabel.innerText = "Lifetime";
+            } else if (status === 'trial') {
+                const now = new Date().getTime();
+                const diff = Math.floor((now - start) / (1000 * 60 * 60 * 24));
+                if (diff >= 7) {
+                    localStorage.removeItem('nexa_status');
+                    screen.classList.remove('hidden');
+                } else {
+                    screen.classList.add('hidden');
+                    statusLabel.innerText = (7 - diff) + " Days Left";
+                }
             }
         }
 
-        function saveAndRender() {
-            localStorage.setItem('nexa_students', JSON.stringify(students));
-            renderStudents();
+        function toggleTheme() { document.getElementById('appBody').classList.toggle('dark-mode'); }
+
+        function saveStudent() {
+            const n = document.getElementById('name').value;
+            const p = document.getElementById('phone').value;
+            const f = document.getElementById('fees').value;
+            if(n && p && f) {
+                students.push({ n, p, f, id: Date.now() });
+                localStorage.setItem('nexa_pro_students', JSON.stringify(students));
+                location.reload();
+            }
         }
 
-        function renderStudents() {
-            const list = document.getElementById('studentList');
-            document.getElementById('studentCount').innerText = students.length;
-            list.innerHTML = '';
-
+        function render() {
+            const cont = document.getElementById('listContainer');
+            document.getElementById('totalStudents').innerText = students.length;
             students.forEach(s => {
-                list.innerHTML += `
-                    <div class="bg-white dark:bg-gray-800 p-4 rounded-xl shadow flex justify-between items-center border-l-4 border-blue-500">
+                cont.innerHTML += `
+                    <div class="glass p-4 rounded-2xl flex justify-between items-center animate-fade-in">
                         <div>
-                            <h5 class="font-bold">${s.name}</h5>
-                            <p class="text-xs text-gray-500">Fees: ₹${s.fees}</p>
+                            <div class="font-bold text-sm">${s.n}</div>
+                            <div class="text-[10px] text-gray-500 font-medium tracking-tight">FEES: ₹${s.f}</div>
                         </div>
-                        <div class="flex gap-3">
-                            <button onclick="sendWA('${s.phone}', '${s.name}', '${s.fees}')" class="text-green-500 text-xl">
+                        <div class="flex gap-2">
+                            <button onclick="sendWA('${s.p}', '${s.n}', '${s.f}')" class="w-9 h-9 rounded-full bg-green-500/10 text-green-500 flex items-center justify-center">
                                 <i class="fab fa-whatsapp"></i>
                             </button>
-                            <button onclick="deleteStudent(${s.id})" class="text-red-400 text-xl">
-                                <i class="fas fa-trash"></i>
+                            <button onclick="del(${s.id})" class="w-9 h-9 rounded-full bg-red-500/10 text-red-400 flex items-center justify-center">
+                                <i class="fas fa-trash-alt"></i>
                             </button>
                         </div>
                     </div>
@@ -169,27 +148,20 @@
             });
         }
 
-        function sendWA(phone, name, fees) {
-            const msg = `Hi, This is a reminder from Nexa Tution Manager. Student: ${name}, Pending Fees: ₹${fees}. Please pay at the earliest. Thank you!`;
-            window.open(`https://wa.me/91${phone}?text=${encodeURIComponent(msg)}`);
+        function sendWA(p, n, f) {
+            const m = `Hello ${n}, this is a reminder for your pending fees of ₹${f}. - Nexa Tution Pro`;
+            window.open(`https://wa.me/91${p}?text=${encodeURIComponent(m)}`);
         }
 
-        function deleteStudent(id) {
-            students = students.filter(s => s.id !== id);
-            saveAndRender();
+        function del(id) {
+            students = students.filter(x => x.id !== id);
+            localStorage.setItem('nexa_pro_students', JSON.stringify(students));
+            location.reload();
         }
 
-        function backupData() {
-            alert("Data Syncing with Khagesh ai-nexa Cloud... Done!");
-        }
-
-        function exportBill() {
-            alert("Generating Student PDF Report... Success!");
-        }
-
-        // Initialize App
-        initSecurity();
-        renderStudents();
+        checkSecurity();
+        render();
     </script>
 </body>
-</html>
+                    </html>
+                    
